php-src/ext/spl/tests/bug73423.exp
Fatal error: Class 'NotExists' not found in %sbug73423.php(%d) : eval()'d code on line 1